[package]
name = "gogoloco-companion"
version = "0.1.0"
edition = "2021"
authors = ["Raphiiko"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vigem-client = "0.1.4"
rosc = "0.9.0"

[dependencies.windows-sys]
version = "0.42.0"
features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"]